[gd_scene load_steps=13 format=3 uid="uid://syonb21b3phv"]

[ext_resource type="Script" uid="uid://3e4mjkbcav6c" path="res://scripts/pause_menu.gd" id="1"]
[ext_resource type="Script" uid="uid://cx7j1x63a26j3" path="res://scripts/audio_control.gd" id="2_kukqi"]
[ext_resource type="Script" uid="uid://33iyc3sb1puf" path="res://scripts/fullscreen_control.gd" id="3_5d2l8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_hover"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_pressed"]
bg_color = Color(0.8, 0.8, 0.8, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_normal"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7l7mv"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v4r4p"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1s2dm"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_88e76"]
color = Color(1, 1, 1, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_knqa7"]
color = Color(1, 0, 0, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_71k7c"]
color = Color(1, 0, 0, 1)
thickness = 6

[node name="PauseMenu" type="Control"]
z_index = 101
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="Dim" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -220.0
offset_right = 260.0
offset_bottom = 220.0

[node name="VBox" type="VBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(400, 360)
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -180.0
offset_right = 200.0
offset_bottom = 180.0
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Paused"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_pressed")
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
text = "Resume"

[node name="RestartButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_pressed")
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
text = "Restart"

[node name="SaveButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_pressed")
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
text = "Save Game"

[node name="OptionsButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_pressed")
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
text = "Options"

[node name="HowToButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26

[node name="QuitButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_pressed")
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
text = "Quit to Main Menu"

[node name="SaveStatus" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1

[node name="HowToPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -220.0
offset_right = 260.0
offset_bottom = 220.0

[node name="Label" type="Label" parent="HowToPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_right = 200.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "How to Play"
horizontal_alignment = 1

[node name="RichText" type="RichTextLabel" parent="HowToPanel"]
layout_mode = 0
offset_left = 40.0
offset_top = 80.0
offset_right = 480.0
offset_bottom = 280.0
bbcode_enabled = true
text = "[b]How to Play[/b]

- Move: WASD / Arrows
- Attack / Interact: Space / E
- Pause: Esc"

[node name="Back" type="Button" parent="HowToPanel"]
layout_mode = 0
offset_left = 40.0
offset_top = 300.0
offset_right = 480.0
offset_bottom = 360.0
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_pressed")
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
text = "Back"

[node name="OptionsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.486
anchor_top = 0.518
anchor_right = 0.486
anchor_bottom = 0.518
offset_left = -252.872
offset_top = -222.664
offset_right = 258.128
offset_bottom = 236.336
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="OptionsPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -253.5
offset_right = 253.5
offset_bottom = 78.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="OptionsPanel"]
layout_mode = 0
offset_left = 73.0
offset_top = 381.0
offset_right = 422.0
offset_bottom = 441.0
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_7l7mv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_v4r4p")
theme_override_styles/normal = SubResource("StyleBoxFlat_1s2dm")
text = "Back"

[node name="VBox" type="VBoxContainer" parent="OptionsPanel"]
layout_mode = 0
offset_left = 78.0
offset_top = 195.0
offset_right = 443.0
offset_bottom = 305.0
theme_override_constants/separation = 24

[node name="AudioControl" type="HSlider" parent="OptionsPanel/VBox"]
layout_mode = 2
size_flags_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxLine_88e76")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_knqa7")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_71k7c")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("2_kukqi")
audio_bus_name = "Music"

[node name="AudioLabel" type="Label" parent="OptionsPanel/VBox/AudioControl"]
layout_mode = 0
offset_top = -70.0
offset_right = 362.0
offset_bottom = -28.0
theme_override_font_sizes/font_size = 30
text = "Music"

[node name="FullscreenControl" type="CheckButton" parent="OptionsPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Fullscreen"
script = ExtResource("3_5d2l8")

[connection signal="pressed" from="Panel/VBox/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="OptionsPanel/Back" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="OptionsPanel/VBox/AudioControl" to="OptionsPanel/VBox/AudioControl" method="_on_value_changed"]
[connection signal="toggled" from="OptionsPanel/VBox/FullscreenControl" to="." method="_on_fullscreen_control_toggled"]
